Fixed picture size on small screens

--- a/css/index.css
+++ b/css/index.css
@@ -89,7 +89,7 @@ body {
   margin-top: 28px;
 }
 .profile {
-  max-width: 40%;
+  max-width: 60%;
   border: 2px solid #000000;
 }
 
